[metadata]
name = qobuz
description = "Unoffical API for Qobuz music streaming service."
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.2
author = taschenb
author_email = taschenb@posteo.de
url = https://github.com/taschenb/python-qobuz
license = MIT
keywords = qobuz, music, streaming
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
install_requires =
    requests>=2.11.1
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[options.extras_require]
test = pytest; responses
develop = flake8; pytest; coverage; responses

[flake8]
max-line-length = 79
show-source = True
statistics = True
exclude = .git

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = qobuz